--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   universal_html: ^2.2.4
   flutter_islamic_icons: ^1.0.2
   flutter_spinkit: ^5.2.1
+  flutter_cached_pdfview: ^0.4.2
 
 dev_dependencies:
   flutter_test:
@@ -77,7 +78,7 @@ flutter:
   assets:
     - Assets/Images/
     - Assets/Animations/
-    - Assets/PDFs/
+    - Assets/Pdfs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
